<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_centerHorizontal="true"
    android:paddingHorizontal="20dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/txt_result"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:gravity="center"
        android:text="Result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/ed_first_number"
        android:gravity="center"
        android:hint="number 1"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/ed_second_number"
        android:gravity="center"
        android:hint="number 2"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/btn_plus"
        android:layout_marginTop="30dp"
        android:text="Plus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_divide"
        android:layout_marginTop="30dp"
        android:text="divide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>


